// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input and Slider component Input Match snapshot with default props 1`] = `
<Inputstyles__Input
  bg="#ffffff"
  border={0}
  borderColor="gray"
  borderRadius={2}
  boxShadow={1}
  color="inherit"
  fontSize="inherit"
  is="input"
  lineHeight="inherit"
  m={0}
  onChange={[Function]}
  placeholder=""
  px=".75rem"
  py=".75rem"
  type="text"
  value=""
  width={1}
/>
`;

exports[`Input and Slider component Slider Renders correctly with 1 Handle 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <InputComponent
    focusOnMount={false}
    onChange={[MockFunction]}
    options={
      Object {
        "domain": Array [
          0,
          100,
        ],
        "filterName": "slider-filter",
        "initialValues": Array [
          0,
        ],
        "step": 5,
        "type": "slider",
      }
    }
    placeholder=""
    value=""
  />
</Provider>
`;

exports[`Input and Slider component Slider Renders correctly with 2 Handles 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <InputComponent
    focusOnMount={false}
    onChange={[MockFunction]}
    options={
      Object {
        "domain": Array [
          0,
          200,
        ],
        "filterName": "slider-filter",
        "initialValues": Array [
          10,
          100,
        ],
        "step": 10,
        "type": "slider",
      }
    }
    placeholder=""
    value=""
  />
</Provider>
`;
